--- a/src/styles/Root.css
+++ b/src/styles/Root.css
@@ -9,7 +9,7 @@
   --dark-color: #343a40;
   --white-color: #ffffff;
   --black-color: #000000;
-  --gray-color-1: #D9D9D9;
+  --gray-color-1: #d9d9d9;
   --body-bg: #f8f9fa;
   --body-color: #212529;
   --border-radius: 0.25rem;
