Update sign in and sign up

--- a/src/styles/Root.css
+++ b/src/styles/Root.css
@@ -10,6 +10,7 @@
   --white-color: #ffffff;
   --black-color: #000000;
   --gray-color-1: #d9d9d9;
+  --gray-color-semi-transparent: rgba(0, 0, 0, 0.5);
   --body-bg: #f8f9fa;
   --body-color: #212529;
   --border-radius: 0.25rem;
@@ -18,4 +19,10 @@
 
 .font-bold {
   font-weight: 600;
+}
+
+.single-line {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
