--- a/src/modals/ModalView.css
+++ b/src/modals/ModalView.css
@@ -13,7 +13,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--white-color);
-  padding: 20px;
+  padding: 40px 80px;
+  width: 100%;
+  box-sizing: border-box;
   max-width: 450px;
   max-height: 500px;
 }
