--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 80px;
-  height: 80px;
+  padding: 25px 80px;
 }
 
 .small .navbar-container {
@@ -16,7 +15,7 @@
 
 .navbar-group {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
 .navbar-logo {
