--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 14px;
+  font-size: 18px;
+  line-height: 26px;
   width: 100%;
   height: 100%;
 }
