--- a/src/components/pages/home/Highlights.css
+++ b/src/components/pages/home/Highlights.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
   color: var(--primary-color);
-  width: 200px;
+  max-width: 250px;
   margin: 40px 0;
 }
 
