--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -7,7 +7,7 @@
   display: flex;
 }
 
-.center {
+.home-section.center {
   flex-direction: column;
   align-items: center;
   justify-content: center;
