--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -9,8 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10px;
-  height: 80px;
+  padding: 20px 10px;
 }
 
 .navbar-group {
