--- a/src/components/pages/home/LawFirm.css
+++ b/src/components/pages/home/LawFirm.css
@@ -3,7 +3,7 @@
   width: 100%;
   background-color: var(--gray-color-4);
   margin-top: -92px;
-  padding-top: 80px;
+  padding: 80px 0;
   z-index: -999;
 }
 
