--- a/src/components/pages/home/Footer.css
+++ b/src/components/pages/home/Footer.css
@@ -22,7 +22,8 @@
   margin: 40px 0;
 }
 
-.footer-links h3 {
+.footer-links h3,
+.footer-links li {
   list-style: none;
   text-align: left;
 }
@@ -31,9 +32,14 @@
   padding: 0;
 }
 
-.footer-links li {
-  list-style: none;
-  text-align: left;
+.small .footer-links {
+  flex-direction: column;
+  align-items: center;
+}
+
+.small .footer-links h3,
+.small .footer-links li {
+  text-align: center;
 }
 
 .footer-logo-text {
