--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -26,6 +26,8 @@
   --font-size-h3: 24px;
   --font-size-p1: 20px;
   --font-size-p2: 16px;
+  --shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12),
+    0 9px 28px 8px rgba(0, 0, 0, 0.05);
 }
 
 .font-bold {
