--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
-html {
-  width: 100%;
-  height: 100%;
-}
-
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -12,8 +8,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 18px;
   line-height: 26px;
-  width: 100%;
-  height: 100%;
 }
 
 code {
