--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -1,12 +1,13 @@
 :root {
   --primary-color: #27ae60;
   --primary-color-light: rgba(39, 174, 96, 0.1);
+  --primary-color-light-notrans: #ebf7ef;
   --secondary-color: #6c757d;
   --success-color: #28a745;
   --danger-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #17a2b8;
-  --light-color: #f8f9fa;
+  --light-color: #f2f2f2;
   --dark-color: #343a40;
   --white-color: #ffffff;
   --white-color-transparent-1: rgba(255, 255, 255, 0.2);
