--- a/src/components/pages/home/Common.css
+++ b/src/components/pages/home/Common.css
@@ -5,6 +5,10 @@
 }
 
 .small .text-block {
+  padding: 80px 0 40px;
+}
+
+.small .text-block {
   width: 80%;
 }
 
@@ -26,10 +30,20 @@
   line-height: 56px;
 }
 
+.small .text-block-title {
+  font-size: var(--font-size-h3);
+  line-height: 40px;
+}
+
 .text-block-title.h3 {
   font-size: var(--font-size-h3);
   color: var(--primary-color);
   line-height: 40px;
+}
+
+.small .text-block-title.h3 {
+  font-size: var(--font-size-h4);
+  line-height: 36px;
 }
 
 .text-block-description {
