--- a/src/components/pages/home/ProductFeatures.css
+++ b/src/components/pages/home/ProductFeatures.css
@@ -16,6 +16,7 @@
 .small .pf-section {
   flex-direction: column;
   align-items: center;
+  padding-bottom: 0;
 }
 
 .small .pf-section svg {
@@ -28,7 +29,6 @@
 }
 
 .small .supported-immigration {
-  padding: 80px 0 0 0;
   width: 90%;
 }
 
@@ -39,9 +39,17 @@
   margin-bottom: 20px;
 }
 
+.small .supported-immigration-title {
+  font-size: var(--font-size-h4);
+}
+
 .supported-immigration-types {
   display: flex;
   justify-content: space-around;
   gap: 10%;
   font-weight: var(--font-weight-bold);
+}
+
+.small .supported-immigration-types {
+  gap: 1%;
 }
