--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -25,6 +25,7 @@
   --font-weight-bold: 600;
   --font-size-h2: 40px;
   --font-size-h3: 24px;
+  --font-size-h4: 20px;
   --font-size-p1: 20px;
   --font-size-p2: 16px;
   --shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12),
