--- a/src/components/pages/auth/Ads.css
+++ b/src/components/pages/auth/Ads.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  max-width: 800px;
 }
 
 .ads svg {
