--- a/src/components/pages/auth/Ads.css
+++ b/src/components/pages/auth/Ads.css
@@ -10,6 +10,12 @@
   justify-content: center;
   gap: 100px;
   max-width: 800px;
+  align-self: flex-end;
+}
+
+.small .ads {
+  padding: 40px;
+  margin-top: 80px;
 }
 
 .ads svg {
