--- a/src/components/pages/auth/AuthComponent.css
+++ b/src/components/pages/auth/AuthComponent.css
@@ -3,9 +3,17 @@
   flex-direction: column;
   justify-content: space-between;
   max-width: 500px;
-  align-self: center;
-  width: 100%;
   height: 100%;
+  padding-left: 200px;
+}
+
+.medium .auth-container {
+  padding-left: 80px;
+}
+
+.small .auth-container {
+  margin: auto;
+  padding-left: 0;
 }
 
 .auth-brand {
