--- a/src/components/pages/home/PriceChart.css
+++ b/src/components/pages/home/PriceChart.css
@@ -4,8 +4,40 @@
   justify-content: center;
   align-items: center;
   width: 90%;
-  background-color: var(--primary-color-light);
   padding-bottom: 100px;
+}
+
+.price-areas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 20px 0;
+  gap: 40px;
+}
+
+.price-area {
+  background-color: var(--gray-color-4);
+  padding: 0 40px 40px;
+}
+
+.price-area-icon {
+  margin-top: -70px;
+}
+
+.price-area-description {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
+.price-area-description-item {
+  flex: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  padding: 20px 0 0;
 }
 
 .price-chart-detail {
