--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -20,6 +20,7 @@
   --gray-color-4: #f2f2f2;
   --gray-color-5: #4f4f4f;
   --gray-color-6: #bdbdbd;
+  --gray-color-7: #9e9e9e;
   --body-bg: #f8f9fa;
   --body-color: #212529;
   --border-radius: 0.25rem;
