--- a/src/components/pages/home/PriceChart.css
+++ b/src/components/pages/home/PriceChart.css
@@ -7,6 +7,10 @@
   padding-bottom: 100px;
 }
 
+.small .price-chart {
+  padding-bottom: 40px;
+}
+
 .price-areas {
   display: flex;
   justify-content: center;
@@ -16,9 +20,16 @@
   gap: 40px;
 }
 
+.small .price-areas {
+  flex-direction: column;
+  padding-top: 80px;
+  gap: 120px;
+}
+
 .price-area {
   background-color: var(--gray-color-4);
   padding: 0 40px 40px;
+  max-width: 600px;
 }
 
 .price-area-icon {
@@ -38,6 +49,14 @@
   justify-content: flex-start;
   gap: 10px;
   padding: 20px 0 0;
+}
+
+.medium .price-area-description-item {
+  flex: 100%;
+}
+
+.small .price-area-description-item {
+  flex: 100%;
 }
 
 .price-chart-detail {
