--- a/src/components/pages/auth/Ads.css
+++ b/src/components/pages/auth/Ads.css
@@ -1,6 +1,6 @@
 .ads {
   border-radius: 20px;
-  background-color: var(--light-color);
+  background-color: var(--gray-color-4);
   padding: 80px;
   height: 100%;
   box-sizing: border-box;
