--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -8,8 +8,7 @@
   --danger-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #17a2b8;
-  --light-color: #f2f2f2;
-  --dark-color: #343a40;
+  --line-color: #231f20;
   --white-color: #ffffff;
   --white-color-transparent-1: rgba(255, 255, 255, 0.2);
   --white-color-transparent-2: rgba(255, 255, 255, 0.4);
