--- a/src/components/pages/home/Common.css
+++ b/src/components/pages/home/Common.css
@@ -4,11 +4,9 @@
   box-sizing: border-box;
 }
 
+.xsmall .text-block,
 .small .text-block {
   padding: 80px 0 40px;
-}
-
-.small .text-block {
   width: 80%;
 }
 
@@ -30,6 +28,7 @@
   line-height: 56px;
 }
 
+.xsmall .text-block-title,
 .small .text-block-title {
   font-size: var(--font-size-h3);
   line-height: 40px;
@@ -41,6 +40,7 @@
   line-height: 40px;
 }
 
+.xsmall .text-block-title.h3,
 .small .text-block-title.h3 {
   font-size: var(--font-size-h4);
   line-height: 36px;
