--- a/src/components/pages/home/PriceChart.css
+++ b/src/components/pages/home/PriceChart.css
@@ -7,6 +7,7 @@
   padding-bottom: 100px;
 }
 
+.xsmall .price-chart,
 .small .price-chart {
   padding-bottom: 40px;
 }
@@ -20,6 +21,7 @@
   gap: 40px;
 }
 
+.xsmall .price-areas,
 .small .price-areas {
   flex-direction: column;
   padding-top: 80px;
@@ -55,6 +57,7 @@
   flex: 100%;
 }
 
+.xsmall .price-area-description-item,
 .small .price-area-description-item {
   flex: 100%;
 }
@@ -97,6 +100,7 @@
   margin-bottom: 20px;
 }
 
+.xsmall .gutter-row.price-level,
 .small .gutter-row.price-level {
   font-size: var(--font-size-h4);
 }
@@ -109,10 +113,12 @@
   margin-bottom: 20px;
 }
 
+.xsmall .gutter-row.price,
 .small .gutter-row.price {
   font-size: var(--font-size-h4);
 }
 
+.xsmall .gutter-row svg,
 .small .gutter-row svg {
   height: 20px;
   width: 20px;
