--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -3,13 +3,14 @@
 }
 
 .home-container {
-  padding: 0;
-  margin: 200px 0 0;
+  padding: 200px 0 0;
+  overflow-y: auto;
+  height: 100%;
 }
 
 .xsmall .home-container,
 .small .home-container {
-  margin: 80px 0 0;
+  padding: 80px 0 0;
 }
 
 .home-section {
