--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -3,13 +3,18 @@
 }
 
 .home-container {
-  padding: 200px 0 0;
   overflow-y: auto;
-  height: 100%;
+  height: calc(100vh - 72px);
+  position: sticky;
+  top: 0;
 }
 
-.xsmall .home-container,
-.small .home-container {
+.home-container > .home-section:first-child {
+  padding-top: 200px;
+}
+
+.xsmall .home-container > .home-section:first-child,
+.small .home-container > .home-section:first-child {
   padding: 80px 0 0;
 }
 
@@ -105,6 +110,7 @@
   margin: 40px 20px 80px 20px;
   width: 500px;
   height: 280px;
+  z-index: 800;
 }
 
 .xsmall .home-video,
