--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -26,6 +26,7 @@
   --transition: all 0.5s ease-in-out;
   --font-weight-bold: 600;
   --font-size-h2: 40px;
+  --font-size-h2-small: 30px;
   --font-size-h3: 24px;
   --font-size-h4: 20px;
   --font-size-p1: 20px;
