--- a/src/components/form/FormFlow.css
+++ b/src/components/form/FormFlow.css
@@ -4,15 +4,32 @@
   gap: 10px;
   background-color: var(--gray-color-4);
   height: 100%;
-  padding: 20px 40px;
+  padding: 60px 40px 0 40px;
+  box-sizing: border-box;
 }
 
 .form-flow-top {
+  position: relative;
   background-color: var(--white-color);
   border-radius: 10px;
+  padding: 20px;
+  height: 80px;
+}
+
+.form-flow-icon {
+  padding: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.form-flow-icon svg {
+  display: block;
 }
 
 .form-flow-content {
   display: flex;
   gap: 10px;
+  flex-grow: 1;
+  overflow: auto;
 }
