--- a/src/components/form/FormFlow.css
+++ b/src/components/form/FormFlow.css
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+.xsmall .form-flow,
+.small .form-flow {
+  padding: 40px 10px 0 10px;
+}
+
 .form-flow-top {
   position: relative;
   background-color: var(--white-color);
@@ -25,6 +30,12 @@
 
 .form-flow-icon svg {
   display: block;
+}
+
+.xsmall .form-flow-icon svg,
+.small .form-flow-icon svg {
+  width: 80px;
+  height: auto;
 }
 
 .form-flow-content {
