--- a/src/components/form/fields/NationalityDropdown.css
+++ b/src/components/form/fields/NationalityDropdown.css
@@ -1,4 +1,35 @@
-.nationality-dropdown {
-  max-width: 250px;
-  width: 100%;
+.container {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.container .title {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: left;
+  font: #000000;
+  margin-bottom: 16px;
+}
+
+.container .dropdowns-container {
+  width: 600px;
+  gap: 20px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.select {
+  width: 180px;
+}
+
+.select .ant-select-selector {
+  border-radius: 2px !important;
+  border: 1px solid #d9d9d9 !important;
+  height: 40px !important;
+  background-color: #ffffff !important;
+  font-family: "Roboto", sans-serif;
+  font-size: small !important;
 }
