--- a/src/components/form/FormField.css
+++ b/src/components/form/FormField.css
@@ -1,22 +1,44 @@
-.horizontal {
+.horizontal-1 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.horizontal-2 {
+  display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
-.xsmall .horizontal,
-.small .horizontal {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
+.horizontal-2 > .sub-field {
+  flex: 0 1 auto;
+  max-width: calc(50% - 20px);
 }
 
-.vertical {
+.horizontal-3 {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  max-width: calc(var(--textbox-width) * 3 + 20px);
+}
+
+.horizontal-3 > .sub-field {
+  flex: 0 1 auto;
+  min-width: calc(33.33% - 20px);
+}
+
+.xsmall .horizontal-2 > .sub-field,
+.small .horizontal-2 > .sub-field,
+.xsmall .horizontal-3 > .sub-field,
+.small .horizontal-3 > .sub-field {
+  flex: 1 1 100%;
 }
