--- a/src/components/modals/ModalView.css
+++ b/src/components/modals/ModalView.css
@@ -14,19 +14,19 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--white-color);
-  padding: 40px 80px;
+  padding: 20px;
   width: 100%;
   box-sizing: border-box;
-  max-width: 450px;
-  max-height: 500px;
+  max-width: 700px;
+  border-radius: 10px;
 }
 
 .modalview-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 12px;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 20px;
 }
 
 .modalview-content {
