--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -17,6 +17,10 @@
   align-items: center;
 }
 
+.navbar-container.form-nav {
+  padding: 15px 10px 0 0;
+}
+
 .navbar-group {
   display: flex;
   align-items: center;
@@ -26,10 +30,11 @@
 .small .navbar-group {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 .navbar-logo {
-  margin-right: 50px;
+  margin-right: 0;
 }
 
 .navbar-logo-link {
