--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -20,6 +20,7 @@
   --gray-color-5: #4f4f4f;
   --gray-color-6: #bdbdbd;
   --gray-color-7: #9e9e9e;
+  --gray-color-semi-transparent: rgba(0, 0, 0, 0.6);
   --body-bg: #f8f9fa;
   --body-color: #212529;
   --border-radius: 0.25rem;
@@ -31,8 +32,12 @@
   --font-size-h4: 20px;
   --font-size-p1: 20px;
   --font-size-p2: 16px;
-  --font-size-p3: 12px;
+  --font-size-p3: 14px;
   --line-height-p3: 16px;
+  --textbox-width: 250px;
+  --upload-btn-background: rgba(0, 0, 0, 0.02);
+  --upload-btn-border: 1px dashed #d9d9d9;
+  --upload-btn-hover: #4096ff;
   --shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12),
     0 9px 28px 8px rgba(0, 0, 0, 0.05);
   --shadow-green: 0 6px 16px 0 rgba(39, 174, 96, 0.2),
