--- a/src/components/form/fields/Controls.css
+++ b/src/components/form/fields/Controls.css
@@ -28,3 +28,21 @@
   max-width: 250px;
   width: 100%;
 }
+
+.dropdown-container {
+  max-width: 400px;
+  width: 100%;
+  margin: 20px 0;
+}
+
+.dropdown-inner {
+  width: 100%;
+}
+
+.dropdown-inner-uploader {
+  margin: 20px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
