--- a/src/components/form/FormContent.css
+++ b/src/components/form/FormContent.css
@@ -17,6 +17,11 @@
   border-bottom: 1px solid var(--gray-color-4);
 }
 
+.xsmall .form-content-header,
+.small .form-content-header {
+  padding: 30px 20px;
+}
+
 .form-content-form {
   padding: 40px;
   background-color: var(--white-color);
