Implement select component

--- a/src/components/form/fields/Controls.css
+++ b/src/components/form/fields/Controls.css
@@ -46,3 +46,16 @@
   justify-content: center;
   align-items: center;
 }
+
+.select-box{
+  max-width: 250px;
+  width: 100%;
+}
+
+.select-box .ant-select{
+  width: 100%;
+}
+
+.select-box .ant-select .ant-select-selector{
+  border-radius: 4px !important;
+}
