Update form APIs and reducers

--- a/src/components/pages/dashboard/Dashboard.css
+++ b/src/components/pages/dashboard/Dashboard.css
@@ -11,6 +11,8 @@
 .dashboard-panel {
   border-radius: 10px;
   display: flex;
+  gap: 20px;
+  flex-flow: wrap;
 }
 
 .dashboard-panel.no-application {
