--- a/src/components/form/fields/PassportUploader.css
+++ b/src/components/form/fields/PassportUploader.css
@@ -5,6 +5,21 @@
   gap: 20px;
 }
 
+.passport-uploader-upload {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.passport-uploader-upload svg {
+  width: 14px;
+  height: 14px;
+}
+
 .passport-uploader-inner {
   width: 100px;
   height: 100px;
@@ -13,11 +28,13 @@
   border-radius: 4px;
   cursor: pointer;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
 .passport-uploader-inner:hover {
   border-color: var(--upload-btn-hover);
+}
+
+.passport-uploader-inner img {
+  cursor: pointer;
+  align-self: center;
 }
