--- a/src/components/form/fields/TextboxWithNA.css
+++ b/src/components/form/fields/TextboxWithNA.css
@@ -1,6 +1,18 @@
 .textbox-na {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 10px;
+  gap: 10px;
+}
+
+.textbox-na-text {
+  display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.textbox-na-btn {
+  color: var(--gray-color-2);
 }
