Add the dashboard link to nav

--- a/src/components/common/Fonts.css
+++ b/src/components/common/Fonts.css
@@ -28,6 +28,10 @@
   font-size: var(--font-size-h3);
 }
 
+.text.medium {
+  font-size: var(--font-size-p1);
+}
+
 .text.small {
   font-size: var(--font-size-p2);
 }
