--- a/src/components/form/FormNavigation.css
+++ b/src/components/form/FormNavigation.css
@@ -5,6 +5,16 @@
   align-self: flex-start;
 }
 
+.form-navigation-return {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  cursor: pointer;
+  border-bottom: 1px solid var(--gray-color-4);
+  color: var(--primary-color);
+  gap: 10px;
+}
+
 .form-navigation .ant-collapse-header {
   border-radius: 0 !important;
   border-bottom: 1px solid var(--gray-color-4) !important;
