--- a/src/components/form/FormNavigation.css
+++ b/src/components/form/FormNavigation.css
@@ -32,7 +32,7 @@
 }
 
 .form-navigation-l2.active {
-  color: var(--gray-color-1);
+  color: var(--primary-color);
   border-right: 3px solid var(--primary-color);
   background-color: var(--white-color);
 }
