Add document list feature

--- a/src/components/common/Loading.css
+++ b/src/components/common/Loading.css
@@ -1,9 +1,5 @@
 .loading {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  display: block;
 }
 
 .loading p {
