Fix the bug of null and add support for travel doc

--- a/src/components/form/fields/PassportUploader.css
+++ b/src/components/form/fields/PassportUploader.css
@@ -28,6 +28,8 @@
   border-radius: 4px;
   cursor: pointer;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .passport-uploader-inner:hover {
@@ -36,5 +38,6 @@
 
 .passport-uploader-inner img {
   cursor: pointer;
-  align-self: center;
+  max-width: 100px;
+  max-height: 100px;
 }
